[metadata]
name = husser13
version = 0.1
author = Jeff Valenti
author_email = valenti@stsci.edu
description = Tools that use data from Husser et al. (2013A&A...553A...6)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JeffValenti/husser13
project_urls =
    Bug Tracker = https://github.com/JeffValenti/husser13/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
scripts =
    bin/ftp_husser13.py
